--- a/go-gin-hello/Dockerfile
+++ b/go-gin-hello/Dockerfile
@@ -25,6 +25,7 @@ COPY --from=builder /app/hello .
 
 # Expose port 8080 to the outside world
 EXPOSE 8080
+EXPOSE 443
 
 # Command to run the executable
 CMD ["./hello"]
